<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_tab"
        android:icon="@drawable/selector_navbar_home"
        android:title="" />
    <item
        android:id="@+id/search_tab"
        android:icon="@drawable/selector_navbar_search"
        android:title="" />
    <item
        android:id="@+id/calculate_tab"
        android:icon="@drawable/selector_navbar_calculate"
        android:title="" />
    <item
        android:id="@+id/menu_tab"
        android:icon="@drawable/selector_navbar_menu"
        android:title="" />
    <item
        android:id="@+id/user_tab"
        android:icon="@drawable/selector_navbar_user"
        android:title="" />
</menu>