...
<!--            android:fontFamily="@font/nunito_light"-->
<!--            android:textSize="15dp"-->
<!--            android:text="{steps of recipe}"-->
<!--            android:layout_below="@+id/recipe_steps_title"/>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_to_favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_log"
...
