...
    <string name="recipe_calories">Calories: </string>


    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>

    <string name="edit">Edit profile</string>
    <string name="save">Save</string>

    <string name="setting1">Screen brightness</string>
    <string name="setting2">Volume adjustment</string>
...
