...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/fragment_recipe_detailed_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
...
