...
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <androidx.appcompat.widget.SearchView
               android:id="@+id/search_input"
               android:layout_width="380dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="30dp"
               android:background="@drawable/edit_text_border"
               android:backgroundTint="@color/white_grey"
...
<!--               android:layout_height="wrap_content"-->
<!--               android:layout_below="@id/search_recycler_view2"-->
<!--               android:layout_marginLeft="15dp"-->
<!--               android:layout_marginTop="20dp"-->
<!--               android:layout_marginRight="20dp"/>-->
           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/search_recycler_view"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@id/search_input"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="20dp"
               android:layout_marginRight="20dp"/>
...
